--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,12 +2,12 @@
 	.result-page {
 		nav {
 			background-color: var(--color-primary);
-			height: 110px;
+			height: auto;
       padding: 0 37px;
 		}
 	}
 	nav {
-		position: absolute;
+		position: relative;
 		top: 0;
 		left: 0;
 		display: flex;
@@ -19,7 +19,7 @@
 
 		& div.message-container {
 			width: 100%;
-			height: 110px;
+			height: auto;
 			padding: 16.5px 0;
 			background-color: var(--color-primary);
 			display: flex;
